--- a/src/CustomerApp/Customer/CustomerApp.CustomerView.html
+++ b/src/CustomerApp/Customer/CustomerApp.CustomerView.html
@@ -9,10 +9,11 @@
 
     <input [disabled]="!(CustomerModel.formCustomerGroup.valid)" (click)="Add()" type="button" value="Add"><br>
 </form>
+<div *ngIf="CustomerModel.formCustomerGroup.dirty" [hidden]="!(hasError('pattern', 'CustomerCodeControl'))">Customer code format is not proper</div><br>
 
-{{CustomerModel.CustomerCode}} <br />
-{{CustomerModel.CustomerName}} <br />
-{{CustomerModel.CustomerAmount}} <br />
+<div *ngIf="CustomerModel.formCustomerGroup.dirty" [hidden]="!(hasError('required', 'CustomerCodeControl'))">Customer code is required</div><br>
+
+<div *ngIf="CustomerModel.formCustomerGroup.dirty" [hidden]="!(hasError('required', 'CustomerNameControl'))">Customer name is required</div><br>
 
 <table>
     <tr>
